--- a/brand.css
+++ b/brand.css
@@ -42,17 +42,20 @@ i{
 
 .sep{
     margin-left: 20%;
+    width: 80%;
 }
 
 .tick{
     background-color: black;
     width: 80vw;
+    display: flex;
+    justify-content: center;
 }
 
 .tick img{
     height: 20vh;
     width: auto;
-    margin-left: 500px ;
+    max-width: 100%;
 }
 
 .brands-con{
@@ -62,6 +65,8 @@ i{
 .brands-con h1{
     font-size: 60px;
     padding-left: 80px;
+    max-width: 100%;
+    overflow-wrap: break-word;
 }
 
 .nike img{
@@ -96,12 +101,15 @@ i{
 .fill-con{
     display: flex;
     flex-direction:row;
+    flex-wrap: wrap;
     padding: 4%;
 }
 
 .deliver{
     flex-direction: column;
     width: 18vw;
+    min-width: 0;
+    overflow-wrap: break-word;
 }
 
 .fill{
