--- a/cart.css
+++ b/cart.css
@@ -44,16 +44,19 @@ i{
 .tick{
     background-color: black;
     width: 80vw;
+    display: flex;
+    justify-content: center;
 }
 
 .tick img{
     height: 20vh;
     width: auto;
-    margin-left: 500px ;
+    max-width: 100%;
 }
 
 .sep{
     margin-left: 20%;
+    width: 80%;
 }
 
 .cart h1{
@@ -61,6 +64,8 @@ i{
     margin-left: 50px;
     margin-right: 50px;
     width: 40vw;
+    max-width: 100%;
+    overflow-wrap: break-word;
 }
 
 .cart{
