--- a/contact.css
+++ b/contact.css
@@ -80,11 +80,13 @@ i{
     width: 100%;
     float: right;
     background-color: black;
+    display: flex;
+    justify-content: center;
 }
 
 .tick img{
     height: 140px;
-    margin-left: 500px;
+    max-width: 100%;
 }
 
 .sep{
